QuizComponent: Extract QuizQuestionAndAnswerComponent to avoid repetition
To make it easier to change this (now in only one place) to handle
questions with isHtml too (MathML).

--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -25,43 +25,13 @@
               <h4>{{subSection.title}}</h4>
               <!-- Questions in the sub-section. -->
               @for (qa of subSection.questions; track qa) {
-                <div
-                  class="quiz-question-answer">
-                  <p>
-                    <span class="quiz-question-title">Question:</span>
-                    @if (qa.question.link) {
-                      <a class="quiz-question" href={{qa.question.link}}>{{qa.question.text.text}}</a>
-                    }
-                    @if (!(qa.question.link)) {
-                      <span class="quiz-question">{{qa.question.text.text}}</span>
-                    }
-                  </p>
-                  <p>
-                    <span class="quiz-answer-title">Answer:</span>
-                    <span class="quiz-answer">{{qa.answer.text}}</span>
-                  </p>
-                </div>
+                <app-quiz-question-and-answer [qa]="qa"></app-quiz-question-and-answer>
               }
             </div>
           }
           <!-- Questions in the section, not in any sub-section. -->
           @for (qa of section.questions; track qa) {
-            <div
-              class="quiz-question-answer">
-              <p>
-                <span class="quiz-question-title">Question:</span>
-                @if (qa.question.link) {
-                  <a class="quiz-question" href={{qa.question.link}}>{{qa.question.text.text}}</a>
-                }
-                @if (!(qa.question.link)) {
-                  <span class="quiz-question">{{qa.question.text.text}}</span>
-                }
-              </p>
-              <p>
-                <span class="quiz-answer-title">Answer:</span>
-                <span class="quiz-answer">{{qa.answer.text}}</span>
-              </p>
-            </div>
+            <app-quiz-question-and-answer [qa]="qa"></app-quiz-question-and-answer>
           }
         </div>
       }
