UserHistorySectionsComponent: Put HTML in InnerHTML
So we actually render MathML in the text.

Some version of Angular seems to have started putting HTML/markup in
quotes when it is just used dierctly, which seems wise.

--- a/src/app/user-history-sections.component.html
+++ b/src/app/user-history-sections.component.html
@@ -38,8 +38,13 @@
               <p
                 class="problem-answer clearfix">
                 <span class="problem-answer-score">-{{ question.countAnsweredWrong }}</span>
+                @if (questionTitleForHistoryIsHtml(question)) {
+                  <a class="problem-answer-hyperlink" [routerLink]="['/question']"
+                     [queryParams]="generateQuestionLinkQueryParams(question)" [innerHTML]="questionTitleForHistory(question)"></a>
+                } @else {
                 <a class="problem-answer-hyperlink" [routerLink]="['/question']"
                    [queryParams]="generateQuestionLinkQueryParams(question)">{{ questionTitleForHistory(question) }}</a>
+                }
               </p>
             }
 
